--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="row">
         <div class="container">
             <img id="gotLogo" src="icons/logoIcon.png">
-            <h5 class="[ container--mainTitle ]">Game Of Thrones</h5>
-            <h2 class="container--subTitle">''The not so known characters''</h2>
+            <h2 class="[ container--subTitle ]" >''The not so known characters''</h2>
+            <h1 class="[ container--mainTitle ]">Game Of Thrones</h1>
             <div class="row col-md-12" id="characterCardsContainer">
             </div>
             <div class="row col-md-12" id="startButtonContainer">
-                <button id="startButton" onclick="startRace()">Submit</button>
+                <button id="startButton" onclick="startRace()">Start the race!</button>
             </div>
         </div>
     </div>
