--- a/game_Page.html
+++ b/game_Page.html
@@ -7,15 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Shadows+Into+Light" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="Css/boardgame.css">
     <link rel="stylesheet" type="text/css" media="screen" href="Css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="Css/boardgame.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 </head>
 <body>
 <div class="container">
-    <h5 class="container--mainTitle">Game Of Thrones</h5>
-    <h2 class="container--subTitle">''The not so known characters''</h2>
+        <img id="gotLogo" src="icons/logoIcon.png">
+    <h5 class="[ container--mainTitle ]">Game Of Thrones</h5>
+    <h2 class="[ container--subTitle ]">''The not so known characters''</h2>
         <div class="[ boardGame ]">
                 <div class="col-md-12 topLayer row">
                     <div class="col-md-2 [ boardGame__boardIcon ]" id="leftPlayerIcon1"> 
@@ -46,7 +48,7 @@
                 <div class="col-md-12 thirdLayer row">
                     <div class="col-md-2 [ boardGame__sideBar ]" id="leftSideThirdOne">
                         <div id="text_field">
-                                <p id="battleText2"></p>
+                                <p id="battleText"></p>
                         </div>
                     </div>
                     <div class="col-md-1 [ boardGame__trapPiece3 ]" id="19">Trap</div>
