--- a/success_Page.html
+++ b/success_Page.html
@@ -8,18 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Shadows+Into+Light" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="Css/boardgame.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="Css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="Css/boardgame.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
 </head>
-
 <body>
     <div class="row">
         <div class="container">
-            <h5 class="[ container--mainTitle ]">Game Of Thrones</h5>
-            <h2 class="container--subTitle">''The not so known characters''</h2>
-            <div id="winner">
+            <img id="gotLogo" src="icons/logoIcon.png">
+            <h2 class="[ container--subTitle ]">''The not so known characters''</h2>
+            <h1 class="[ container--mainTitle ]">Game Of Thrones</h1>
+
+            <div class="col-md-12">
+                <div class="row" id="holder">
+                    <div id="leftSide_Winner" class="col-md-1"></div>
+                    <canvas class="col-md-10" id="canvasPlace"></canvas>
+                    <div id="rightSide_Winner" class="col-md-1"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -31,6 +35,7 @@
         crossorigin="anonymous"></script>
     <script src="/scripts/script_updated.js"></script>
     <script src="/scripts/boardGame_updated.js"></script>
+    <script src="/scripts/success_page.js"></script>
 </body>
 
 </html>
