--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="Css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./Css/style.css" />
 </head>
 <body id="creationPage">
     <div class="row">
@@ -30,7 +30,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-        <script src="scripts/script_updated.js"></script>
+        <script src="/scripts/script_updated.js"></script>
         <!--<script src="/scripts/boardGame.js"></script>-->
 </body>
 </html>
