--- a/success_Page.html
+++ b/success_Page.html
@@ -33,9 +33,9 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="/scripts/script_updated.js"></script>
-    <script src="/scripts/boardGame_updated.js"></script>
-    <script src="/scripts/success_page.js"></script>
+    <script src="./scripts/script_updated.js"></script>
+    <script src="./scripts/boardGame_updated.js"></script>
+    <script src="./scripts/success_page.js"></script>
 </body>
 
 </html>
