--- a/success_Page.html
+++ b/success_Page.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./Css/boardgame.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body>
+<body onload="showWinner()">
     <div class="row">
         <div class="container">
             <img id="gotLogo" src="icons/logoIcon.png">
@@ -22,7 +22,8 @@
             <div class="col-md-12">
                 <div class="row" id="holder">
                     <div id="leftSide_Winner" class="col-md-1"></div>
-                    <canvas class="col-md-10" id="canvasPlace"></canvas>
+                    <div class="col-md-5 [ winner ]">winner</div>
+                    <canvas class="col-md-5" id="canvasPlace"></canvas>
                     <div id="rightSide_Winner" class="col-md-1"></div>
                 </div>
             </div>
