--- a/success_Page.html
+++ b/success_Page.html
@@ -22,7 +22,7 @@
             <div class="col-md-12">
                 <div class="row" id="holder">
                     <div id="leftSide_Winner" class="col-md-1"></div>
-                    <div class="col-md-5 [ winner ]">winner</div>
+                    <div class="col-md-5" id="winner">winner</div>
                     <canvas class="col-md-5" id="canvasPlace"></canvas>
                     <div id="rightSide_Winner" class="col-md-1"></div>
                 </div>
@@ -35,7 +35,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="./scripts/script_updated.js"></script>
+   <!-- <script src="./scripts/script_updated.js"></script>-->
     <script src="./scripts/boardGame_updated.js"></script>
     <script src="./scripts/success_page.js"></script>
 </body>
