--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <img id="gotLogo" src="icons/logoIcon.png">
             <h2 class="[ container--subTitle ]" >''The not so known characters''</h2>
             <h1 class="[ container--mainTitle ]">Game Of Thrones</h1>
+            <div>
+                    <h1 class="[ container--select ]">Select your Character</h1>
+               </div> 
             <div class="row col-md-12" id="characterCardsContainer">
+
             </div>
             <div class="row col-md-12" id="startButtonContainer">
                 <button id="startButton" onclick="startRace()">Start the race!</button>
