--- a/game_Page.html
+++ b/game_Page.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-md-12 fifthLayer row">
                     <div class="col-md-2 [ boardGame__sideBar ]" id="leftSideFifthOne">
-                        <button class="diceCube" id="diceRoll" onclick="showPrint()">Roll</button>
+                        <button class="diceCube" id="diceRoll" onclick="showPrint()">Roll Dice</button>
                     </div>
                     <div class="col-md-1 [ boardGame__startPiece ]" id="1">1</div>
                     <div class="col-md-1 [ boardGame__boardPieceRight ]" id="2">2</div>
