--- a/success_Page.html
+++ b/success_Page.html
@@ -20,7 +20,7 @@
             <div class="col-md-12">
                 <div class="row" id="holder">
                     <div id="leftSide_Winner" class="col-md-1"></div>
-                    <div class="col-md-5" id="winner">winner</div>
+                    <div class="col-md-5" id="winner"></div>
                     <canvas class="col-md-5" id="canvasPlace"></canvas>
                     <div id="rightSide_Winner" class="col-md-1"></div>
                 </div>
