--- a/game_Page.html
+++ b/game_Page.html
@@ -15,9 +15,9 @@
 </head>
 <body>
 <div class="container">
-        <img id="gotLogo" src="./icons/logoIcon.png">
-    <h5 class="[ container--mainTitle ]">Game Of Thrones</h5>
-    <h2 class="[ container--subTitle ]">''The not so known characters''</h2>
+        <a href="index.html"><img id="gotLogo" src="./icons/logoIcon.png"></a>
+        <a href="index.html"><h5 class="[ container--mainTitle ]">Game Of Thrones</h5></a>
+        <a href="index.html"><h2 class="[ container--subTitle ]">''The not so known characters''</h2></a>
         <div class="[ boardGame ]">
                 <div class="col-md-12 topLayer row">
                     <div class="col-md-2 [ boardGame__boardIcon ]" id="leftPlayerIcon1"> 
