--- a/success_Page.html
+++ b/success_Page.html
@@ -8,21 +8,25 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Shadows+Into+Light" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Css/boardgame.css"> 
+    <link rel="stylesheet" type="text/css" media="screen" href="./Css/boardgame.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Css/style.css" > 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body onload="showWinner()">
     <div class="row">
         <div class="container">
-            <img id="gotLogo" src="icons/logoIcon.png">
-            <h2 class="[ container--subTitle ]">''The not so known characters''</h2>
-            <h1 class="[ container--mainTitle ]">Game Of Thrones</h1>
+            <a href="index.html"><img id="gotLogo" src="icons/logoIcon.png"></a>
+            <a href="index.html"><h2 class="[ container--subTitle ]">''The not so known characters''</h2></a>
+            <a href="index.html"><h1 class="[ container--mainTitle ]">Game Of Thrones</h1></a>
             <div class="col-md-12">
                 <div class="row" id="holder">
                     <div id="leftSide_Winner" class="col-md-1"></div>
                     <div class="col-md-5" id="winner"></div>
                     <canvas class="col-md-5" id="canvasPlace"></canvas>
                     <div id="rightSide_Winner" class="col-md-1"></div>
+                    <div class="row col-md-12" id="startButtonContainer">
+                           <a href="index.html"><button id="startButton">Play Again</button></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -33,7 +37,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-        
     <script src="./scripts/success_page.js"></script>
 </body>
 
