--- a/success_Page.html
+++ b/success_Page.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Shadows+Into+Light" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./Css/boardgame.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Css/style.css" > 
+   <!-- <link rel="stylesheet" type="text/css" media="screen" href="./Css/style.css" >  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body onload="showWinner()">
@@ -25,7 +25,7 @@
                     <canvas class="col-md-5" id="canvasPlace"></canvas>
                     <div id="rightSide_Winner" class="col-md-1"></div>
                     <div class="row col-md-12" id="startButtonContainer">
-                           <a href="index.html"><button id="startButton">Play Again</button></a>
+                        <a href="index.html"><button id="startButton">Play Again</button></a>
                     </div>
                 </div>
             </div>
